tests/negative/test_sym_glob_owning.orb
data Foo {
    x:i32
} (fnc dropFoo (val:Foo::noDrop) () {});

sym f:Foo;

fnc main () () {};